# Network_System_C

./: README.md
NP/NP/: CMakeLists.txt
NP/NP/Client/: CMakeLists.txt  Client
NP/NP/Client/headers/: client.h
NP/NP/Client/src/: main.c
NP/NP/Commune/: CMakeLists.txt
NP/NP/Commune/headers/: Carte.h  Client.h  Joueurs.h  SendRcv.h  inclusions.h
NP/NP/Commune/src/: Carte.c  Client.c  Joueurs.c  SendRcv.c
NP/NP/Serveur/: CMakeLists.txt  Serveur
NP/NP/Serveur/headers/: Jouer.h  serveur.h
NP/NP/Serveur/src/: Jouer.c  main.c
